Bug 394105 - Clicking on build error will not give focus to editor component
Summary: Clicking on build error will not give focus to editor component
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2018-05-10 18:49 UTC by Rolf Eike Beer
Modified: 2018-06-20 18:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rolf Eike Beer 2018-05-10 18:49:50 UTC
If clicking on a build error in the build log the editor component will scroll to the given position, but it will not receive focus. Cursor keys etc. will still scroll the log window.
Comment 1 Kevin Funk 2018-05-14 09:20:06 UTC
Makes sense. This should be fairly trivial. Wanna give it a try?
Comment 2 Sven Brauch 2018-06-20 18:03:10 UTC
Git commit 207d850ed3b91c7f0b8a6bb1c624f9cda3b975c0 by Sven Brauch, on behalf of Amish Naidu.
Committed on 20/06/2018 at 18:02.
Pushed by brauch into branch 'master'.

fix bug where activating current view won't focus it

When activateView was called with the currently active view,
it just returned early, ignoring the focus parameter whether or not
it should set the focus.

Differential Revision: https://phabricator.kde.org/D13592

M  +8    -1    kdevplatform/sublime/mainwindow.cpp

https://commits.kde.org/kdevelop/207d850ed3b91c7f0b8a6bb1c624f9cda3b975c0