fix bug where activating current view won't focus it

When activateView was called with the currently active view,
it just returned early, ignoring the focus parameter whether or not
it should set the focus.

Differential Revision: https://phabricator.kde.org/D13592
BUG: 394105